# video-styler

./: .gitignore  CMakeLists.txt  README.md  flake.nix
docs/: ARCHITECTURE.md  README.md  TOOL_VERSIONS.md  architecture.dot
examples/: README.md
examples/input_videos/: README.md
examples/outputs/: README.md
examples/style_images/: README.md
include/style_transfer/: neural_style_transfer.hpp
include/utils/: logger.hpp
include/video_processor/: video_loader.hpp
src/: CMakeLists.txt  main.cpp
src/style_transfer/: neural_style_transfer.cpp
src/utils/: logger.cpp
src/video_processor/: video_loader.cpp
tests/: CMakeLists.txt  test_logger.cpp  test_neural_style_transfer.cpp  test_video_loader.cpp
